--- a/scss/_typography.scss
+++ b/scss/_typography.scss
@@ -12,7 +12,7 @@ h3,
 h4,
 h5,
 h6 {
-	margin: $spacing auto;
+	margin: $spacing 0;
 	color: inherit;
 	font-weight: 500;
 	font-family: inherit;
